Use a gradient to ensure that listing preview and listing page titles are clearly visible. Minor cleanup on about page.

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -200,7 +200,7 @@
     text-align: center;
     margin: 0.8em;
     box-shadow: 0px 0px 2em gainsboro;
-    width: 22%;
+    width: 17%;
     padding-bottom: 19px;
     border: 1px solid #c7c7c7;
     .bio-image {
@@ -218,18 +218,18 @@
       }
     }
     .short-bio {
-      margin: 1em 1.5em;
-      line-height: 1.8;
-      padding: 28px 12px 2px 12px;
+      margin: 1em 1em;
+      padding: 28px 0 2px 0;
       text-align: left;
       height: 160px;
+      font-size: .95em;
     }
 
     .bio-button {
       display: inline-block;
       color: $primary-color;
       border: 1px solid $primary-color;
-      font-size: 1.1em;
+      font-size: .95em;
       padding: 0.4em 1em;
       border-radius: 500px;
       margin-bottom: 1em;
@@ -237,7 +237,7 @@
     }
     .bio-contact {
       margin-bottom: 1em;
-      line-height: 1.8;
+      font-size: .9em;
     }
   }
 
